Move functions to boids

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required (VERSION 3.13)
 project (Flocking)
 add_executable(Flocking
   main.cpp
-  utils.h)
+  boid.cpp
+  utils.cpp)
 target_link_libraries(Flocking -lsfml-graphics)
 target_link_libraries(Flocking -lsfml-system)
 target_link_libraries(Flocking -lsfml-window)
