--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,8 @@ add_executable(Flocking
   main.cpp
   flocking.cpp
   boid.cpp
-  utils.cpp)
+  utils.cpp
+  quadtree.cpp)
 target_link_libraries(Flocking -lsfml-graphics)
 target_link_libraries(Flocking -lsfml-system)
 target_link_libraries(Flocking -lsfml-window)
