--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "engine"]
 	path = engine
-	url = git@github.com:xenotrix1337/simple-game-engine.git
+	url = https://github.com/xenotrix1337/simple-game-engine.git
